# QuantTrader

./: .gitignore  DataScanner_Pro.mq4  Heiqilin_Converted.mq4  ProductPresets.mqh  QuantTrader_Pro.mq4  QuantTrader_Pro.mq4.bak  QuantTrader_Pro_V3_8.mq4  QuantTrader_Pro_V4.7_Manual.md  QuantTrader_Pro_V4_2.mq4  QuantTrader_Pro_V4_3.mq4  README.md  Requirements.md  build_images.sh  init_database.sql  prepare_sqlx.sh  source_utf8.mq4  start_all.bat  start_all.sh  新金麒麟AI云授权对冲版_DEBUG.mq4  新金麒麟AI云授权对冲版_源码(2).mq4  金桔AI云授权对冲版.mq4  黄金量化辅助工具-MT4-V6.0【标准版】.mq4  黑麒麟.utf8.mq4  黑麒麟AI云授权对冲版.mq4  黑麒麟AI云授权对冲版原始版.mq4
quantum-engine/: .dockerignore  .env.production  README.md  docker-compose.yml
quantum-engine/ai_brain/: pyproject.toml
quantum-engine/ai_brain/src/: main.py
quantum-engine/ai_brain/src/controller/: redis_writer.py
quantum-engine/ai_brain/src/data_loader/: history.py  sentiment.py
quantum-engine/ai_brain/src/models/: rag_agent.py  volatility.py
quantum-engine/core_engine/: Cargo.toml  verify_refactor.py
quantum-engine/core_engine/src/: config.rs  data_models.rs  main.rs
quantum-engine/core_engine/src/connectors/: binance_rest.rs  binance_ws.rs
quantum-engine/core_engine/src/ipc/: http_server.rs  mod.rs  redis_client.rs  state.rs  zmq_pub.rs
quantum-engine/core_engine/src/ipc/ea_metrics/: calculator.rs  types.rs
quantum-engine/core_engine/src/ipc/handlers/: account.rs  auth.rs  candles.rs  commands.rs  ea_sync.rs  history.rs  market.rs  mod.rs  monitor.rs  risk_control.rs
quantum-engine/core_engine/src/oms/: execution.rs  mod.rs  order_book.rs
quantum-engine/core_engine/src/risk/: calculator.rs  circuit.rs  mod.rs
quantum-engine/core_engine/src/strategy/: grid.rs  martingale.rs  mod.rs
(+35 files in other folders)
