[tool.poetry]
name = "ai_brain"
version = "0.1.0"
description = "AI control plane for quantum-engine"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
